# earnings-preview

./: .gitignore  daily-news-task.xml  news_config.example.json  news_config.json  pyproject.toml  run-daily-news.ps1
.github/workflows/: daily-news.yml
src/earnings_analyzer/: __init__.py  analyzer.py  cache.py  cli.py  financials.py  news_analyzer.py  news_config.py  news_sources.py  news_sources_types.py  newsletter.py  obsidian.py  report.py  sec_client.py  stock_price.py
src/podcast_takeaways/: __init__.py  cli.py  fetcher.py  summarizer.py  transcriber.py
tests/: test_financials.py  test_news_summary.py
