[project]
name = "earnings-analyzer"
version = "0.1.0"
description = "Analyze quarterly earnings: financials, SEC filings, analyst Q&A, guidance, and price reaction"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "yfinance>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
browser = ["playwright>=1.40"]
podcast = ["openai-whisper>=20240930", "feedparser>=6.0", "requests>=2.31"]

[project.scripts]
earnings-analyzer = "earnings_analyzer.cli:main"
earnings-news = "earnings_analyzer.cli:daily_news"
podcast-takeaways = "podcast_takeaways.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
